--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -4,6 +4,7 @@
 @import './base/base';
 
 @import './components/item';
+@import './components/column';
 @import './components/column-wrapper';
 
 @import './layout/header';
