--- a/src/css/components/_item.scss
+++ b/src/css/components/_item.scss
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     width: 30rem;
+    margin: $margin-xsmall;
 
     &__item-box {
-        background-color: lightgray;
-        margin: $margin-xsmall;
-        padding: $padding-small;
         border: 1px solid $color-black;
         border-style: dotted;
+        background-color: $color-grey-0;
+        border-radius: $border-radius;
     }
     &__paragraph {
         &--title {
