Add a new modal component
    - Created styles for modal, buttons, labels and inputs
    - Created a new redux to connect to our modal

--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -1,5 +1,7 @@
 $color-white: #fff;
 $color-black: #000;
+$color-green: rgb(76, 175, 80);
+$color-red: rgb(244, 66, 54);
 $color-blue: rgb(0, 132, 255);
 $color-grey-0: rgb(230, 230, 230);
 $color-grey-1: rgb(204, 204, 204);
