--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -8,12 +8,16 @@
 
 html {
     font-size: 62.5%; // 1rem = 10px; 10px/16px = 62.5%
+    height: 100vh;
+    width: 100vw;
 }
 
 body {
     box-sizing: border-box;
+    position: relative;
+    height: 100%;
 }
 
 .App {
-    // Something here
+    height: 100%;
 }
