--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,11 +21,19 @@
 
 html {
   font-size: 62.5%;
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  position: relative;
+  height: 100%;
+}
+
+.App {
+  height: 100%;
 }
 
 .item {
@@ -73,6 +81,149 @@ body {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  height: 100%;
+  height: 50rem;
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 100;
+}
+
+.modal--visible {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal--hide {
+  display: none;
+}
+
+.modal__modal-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 50rem;
+  padding: 2rem;
+  background-color: #cccccc;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-radius: 0.5rem;
+}
+
+.modal__input {
+  width: 100%;
+  padding-left: 1rem;
+  height: 3rem;
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  border: none;
+  outline-width: 0;
+}
+
+.modal__input--description {
+  min-height: 20rem;
+  padding: 1rem;
+  font-size: 1.92rem;
+  resize: none;
+}
+
+.modal__label {
+  height: 2.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  font-size: 1.2rem;
+  padding-left: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.modal__input:placeholder-shown + .modal__label {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateY(-4rem);
+          transform: translateY(-4rem);
+}
+
+.modal__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.modal__ctrl {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: 1rem;
+}
+
+.btn {
+  width: 7.5rem;
+  border-radius: 0.5rem;
+  color: #fff;
+  height: 2.5rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border: none;
+  outline-width: 0;
+  cursor: pointer;
+  -webkit-box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
+          box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
+  -webkit-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+
+.btn--ok {
+  background-color: #4caf50;
+}
+
+.btn--cancel {
+  margin-left: 1rem;
+  background-color: #f44236;
+}
+
+.btn:hover {
+  -webkit-transform: translateY(-0.25rem);
+          transform: translateY(-0.25rem);
+  -webkit-box-shadow: 0.6rem 0.6rem 1.2rem rgba(0, 0, 0, 0.7);
+          box-shadow: 0.6rem 0.6rem 1.2rem rgba(0, 0, 0, 0.7);
+}
+
+.btn:active {
+  -webkit-transform: translateY(-0.1rem);
+          transform: translateY(-0.1rem);
+  -webkit-box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
+          box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
 }
 
 .footer {
