--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,6 +6,8 @@
 @import './components/item';
 @import './components/column';
 @import './components/column-wrapper';
+@import './components/modal';
+@import './components/button';
 
 @import './layout/header';
 @import './layout/footer';
