--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -8,14 +8,22 @@ $color-grey-3: rgb(110, 110, 110);
 
 $default-font-size: 1.6;
 
+$font-size-xsmall: 1rem;
+$font-size-small: 1.8rem;
+$font-size-medium: 2.4rem;
+$font-size-large: 3.2rem;
+$font-size-xlarge: 4rem;
+
 $margin-xsmall: 1rem;
 $margin-small: 2rem;
 $margin-medium: 4rem;
 $margin-large: 6rem;
 
+$padding-tiny: .5rem;
 $padding-xsmall: 1rem;
 $padding-small: 2rem;
 $padding-medium: 4rem;
 $padding-large: 6rem;
 
 $border-radius: 0.5rem;
+$border-radius-large: 1rem;
