--- a/src/css/components/_column.scss
+++ b/src/css/components/_column.scss
@@ -1,4 +1,8 @@
 .col {
-    background-color: $color-grey-1;
+    // background-color: $color-grey-1;
     border-radius: $border-radius;
+    background-image: url('../assets/icons/svg/000-wood-board.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
