--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,21 @@ body {
           box-sizing: border-box;
 }
 
+.app {
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -58,9 +73,102 @@ body {
   text-align: center;
 }
 
-.col {
+.item-menu {
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  padding: 0.5rem 1rem;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.item-menu__ul {
   background-color: #cccccc;
+  width: 25%;
+  list-style-type: none;
+  text-align: center;
+  padding: 4rem;
+  border-radius: 10px;
+  position: relative;
+}
+
+.item-menu__li {
+  padding: 4rem;
+  font-size: 1.8rem;
+  cursor: pointer;
+  border-bottom: 1px solid #000;
+}
+
+.item-menu__li:last-of-type {
+  border-bottom: none;
+}
+
+.item-menu__close {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  cursor: pointer;
+}
+
+.move-item {
+  position: absolute;
+  top: 39%;
+  left: 59%;
+  border: 1px solid black;
+  border-radius: 10px;
+  z-index: 3;
+  background-color: #cccccc;
+  width: 20%;
+  padding: 2rem;
+  text-align: center;
+}
+
+.move-item__close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  cursor: pointer;
+}
+
+.move-item__title {
+  font-size: 2.4rem;
+  margin-bottom: 2rem;
+}
+
+.move-item__subtitle {
+  font-size: 1.8rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #000;
+}
+
+.move-item__ul {
+  list-style-type: none;
+  padding: 0.5rem;
+}
+
+.move-item__li {
+  font-size: 1.6rem;
+  padding: 0.5rem 0;
+  cursor: pointer;
+}
+
+.col {
   border-radius: 0.5rem;
+  background-image: url("../assets/icons/svg/000-wood-board.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
 .col-wrapper {
@@ -116,3 +224,4 @@ body {
 .footer__dev-link:hover {
   color: #0084ff;
 }
+/*# sourceMappingURL=style.css.map */
