--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -4,6 +4,8 @@
 @import './base/base';
 
 @import './components/item';
+@import './components/item-menu';
+@import './components/move-item';
 @import './components/column';
 @import './components/column-wrapper';
 
