--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,10 +32,6 @@ body {
   height: 100%;
 }
 
-.App {
-  height: 100%;
-}
-
 .app {
   width: 100vw;
   height: 100vh;
@@ -172,11 +168,10 @@ body {
 }
 
 .col {
+  background-color: #cccccc;
   border-radius: 0.5rem;
-  background-image: url("../assets/icons/svg/000-wood-board.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
+  width: 300px;
+  height: 360px;
 }
 
 .col-wrapper {
