--- a/src/css/components/_column.scss
+++ b/src/css/components/_column.scss
@@ -7,4 +7,11 @@
     // background-position: center;
     width: 300px;
     height: 360px;
+
+    &__col-individual {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
