--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,6 +77,13 @@ body {
   text-align: center;
 }
 
+.item-wrapper {
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+  background-color: pink;
+}
+
 .item-menu {
   background-color: rgba(0, 0, 0, 0.6);
   position: absolute;
@@ -172,6 +179,22 @@ body {
   border-radius: 0.5rem;
   width: 300px;
   height: 360px;
+}
+
+.col__col-individual {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .col-wrapper {
@@ -315,6 +338,11 @@ body {
   background-color: #f44236;
 }
 
+.btn--add {
+  width: 50%;
+  background-color: #6e6e6e;
+}
+
 .btn:hover {
   -webkit-transform: translateY(-0.25rem);
           transform: translateY(-0.25rem);
@@ -370,4 +398,3 @@ body {
 .footer__dev-link:hover {
   color: #0084ff;
 }
-/*# sourceMappingURL=style.css.map */
