--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -3,6 +3,9 @@ $color-black: #000;
 $color-green: rgb(76, 175, 80);
 $color-red: rgb(244, 66, 54);
 $color-blue: rgb(0, 132, 255);
+$color-green-2: rgb(62, 117, 45);
+$color-green-3: rgb(74, 84, 77);
+$color-green-4: rgb(3, 33, 25);
 $color-grey-0: rgb(230, 230, 230);
 $color-grey-1: rgb(204, 204, 204);
 $color-grey-2: rgb(150, 150, 150);
@@ -21,7 +24,7 @@ $margin-small: 2rem;
 $margin-medium: 4rem;
 $margin-large: 6rem;
 
-$padding-tiny: .5rem;
+$padding-tiny: 0.5rem;
 $padding-xsmall: 1rem;
 $padding-small: 2rem;
 $padding-medium: 4rem;
