--- a/src/css/components/_column-wrapper.scss
+++ b/src/css/components/_column-wrapper.scss
@@ -1,7 +1,4 @@
 .col-wrapper {
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    height: 100%;
-    height: 50rem;
+    padding: $padding-small;
 }
