--- a/src/css/components/_item-wrapper.scss
+++ b/src/css/components/_item-wrapper.scss
@@ -1,8 +1,8 @@
 .item-wrapper {
-    // width: 5rem;
-    // height: 10rem;
     width: 100%;
     height: 100%;
     padding: $padding-small;
+    display: flex;
+    flex-direction: column;
     background-color: pink;
 }
