--- a/src/css/layout/_footer.scss
+++ b/src/css/layout/_footer.scss
@@ -32,7 +32,7 @@
         color: $color-white;
 
         &:hover {
-            color: $color-blue;
+            color: $color-green-2;
         }
     }
 }
