--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,6 +45,17 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(204, 204, 204, 0.5)), to(rgba(110, 110, 110, 0.5))), url("../assets/images/bg.jpg");
+  background-image: linear-gradient(to right bottom, rgba(204, 204, 204, 0.5), rgba(110, 110, 110, 0.5)), url("../assets/images/bg.jpg");
+  background-image: url("../assets/images/bg.jpg");
+  background-size: cover;
+}
+
+main {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .item {
@@ -55,8 +66,11 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 30rem;
-  margin: 1rem;
+  width: 100%;
+}
+
+.item__container:not(:first-child) {
+  margin-top: 1rem;
 }
 
 .item__item-box {
@@ -64,12 +78,25 @@ body {
   border-style: dotted;
   background-color: #e6e6e6;
   border-radius: 0.5rem;
+  position: relative;
+}
+
+.item__item-btn {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
 }
 
 .item__paragraph--title {
   font-size: 1.6rem;
   margin-bottom: 1rem;
   border-bottom: 1px solid #000;
+  height: 3rem;
+  line-height: 3rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 0 1rem;
 }
 
 .item__paragraph--status {
@@ -81,6 +108,13 @@ body {
   width: 100%;
   height: 100%;
   padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: pink;
 }
 
@@ -177,8 +211,35 @@ body {
 .col {
   background-color: #cccccc;
   border-radius: 0.5rem;
-  width: 300px;
-  height: 360px;
+  width: 30rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+}
+
+.col:not(:first-child) {
+  margin-left: 2rem;
+}
+
+.col__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  height: 3rem;
+}
+
+.col__column-btn {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
 }
 
 .col__col-individual {
@@ -192,6 +253,20 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.col__title {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -201,14 +276,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  height: 100%;
-  height: 50rem;
+  padding: 2rem;
 }
 
 .modal {
@@ -357,6 +425,23 @@ body {
           box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
 }
 
+.header {
+  height: 3rem;
+  background-color: rgba(74, 84, 77, 0.8);
+}
+
+.header__logo-box {
+  height: 100%;
+  background-color: red;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 2rem;
+}
+
 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -396,5 +481,5 @@ body {
 }
 
 .footer__dev-link:hover {
-  color: #0084ff;
+  color: #3e752d;
 }
