Create new components ColumnEditMenu and DeleteModal

--- a/src/css/components/_item-menu.scss
+++ b/src/css/components/_item-menu.scss
@@ -1,6 +1,6 @@
 .item-menu {
-    background-color: rgba(0,0,0,0.6);
-    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6);
+    position: fixed;
     padding: $padding-tiny $padding-xsmall;
     top: 0;
     bottom: 0;
