--- a/src/css/components/_column.scss
+++ b/src/css/components/_column.scss
@@ -13,7 +13,7 @@
     &:not(:first-child) {
         margin-left: $margin-small;
     }
-    &__header {
+    &__header-box {
         display: flex;
         flex-grow: 1;
         height: 3rem;
@@ -35,5 +35,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    &__ctrl-box {
+        display: flex;
+        justify-content: center;
+        margin: $margin-small 0;
     }
 }
