--- a/src/css/components/_modal.scss
+++ b/src/css/components/_modal.scss
@@ -24,6 +24,7 @@
         display: flex;
         flex-direction: column;
         border-radius: $border-radius;
+        z-index: 10;
     }
     &__input {
         width: 100%;
