--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -11,6 +11,8 @@
 @import './components/column-wrapper';
 @import './components/modal';
 @import './components/button';
+@import './components/window';
+@import './components/delete-modal';
 
 @import './layout/header';
 @import './layout/footer';
