Css party + new delete modal and window

--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -11,24 +11,13 @@ $color-grey-1: rgb(204, 204, 204);
 $color-grey-2: rgb(150, 150, 150);
 $color-grey-3: rgb(110, 110, 110);
 
-$default-font-size: 1.6;
+$default-font-size: 1;
 
-$font-size-xsmall: 1rem;
-$font-size-small: 1.8rem;
-$font-size-medium: 2.4rem;
-$font-size-large: 3.2rem;
-$font-size-xlarge: 4rem;
-
-$margin-xsmall: 1rem;
-$margin-small: 2rem;
-$margin-medium: 4rem;
-$margin-large: 6rem;
-
-$padding-tiny: 0.5rem;
-$padding-xsmall: 1rem;
-$padding-small: 2rem;
-$padding-medium: 4rem;
-$padding-large: 6rem;
+$size-tiny: 0.5rem;
+$size-xsmall: 1rem;
+$size-small: 2rem;
+$size-medium: 4rem;
+$size-large: 6rem;
 
 $border-radius: 0.5rem;
 $border-radius-large: 1rem;
