--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -3,19 +3,19 @@
     border-radius: $border-radius;
     color: $color-white;
     height: 2.5rem;
-    font-size: resize($default-font-size, 0.75);
+    font-size: resize($default-font-size, 1.4);
     font-weight: bold;
     border: none;
     outline-width: 0;
     cursor: pointer;
-    box-shadow: 0.5rem 0.5rem 1rem rgba($color-black, 0.5);
+    box-shadow: 0.5rem 0.5rem 1rem rgba($color-black, 0.3);
     transition: all 0.15s ease-in-out;
 
     &--ok {
         background-color: $color-green;
     }
     &--cancel {
-        margin-left: $margin-xsmall;
+        margin-left: $size-xsmall;
         background-color: $color-red;
     }
     &--add {
@@ -24,7 +24,7 @@
     }
     &:hover {
         transform: translateY(-0.25rem);
-        box-shadow: 0.6rem 0.6rem 1.2rem rgba($color-black, 0.7);
+        box-shadow: 0.6rem 0.6rem 1.2rem rgba($color-black, 0.5);
     }
     &:active {
         transform: translateY(-0.1rem);
