--- a/src/css/components/_item-menu.scss
+++ b/src/css/components/_item-menu.scss
@@ -1,7 +1,7 @@
 .item-menu {
     background-color: rgba(0, 0, 0, 0.6);
     position: fixed;
-    padding: $padding-tiny $padding-xsmall;
+    padding: $size-tiny $size-xsmall;
     top: 0;
     bottom: 0;
     left: 0;
@@ -15,13 +15,13 @@
         width: 25%;
         list-style-type: none;
         text-align: center;
-        padding: $padding-medium;
+        padding: $size-medium;
         border-radius: 10px;
         position: relative;
     }
     &__li {
-        padding: $padding-medium;
-        font-size: $font-size-small;
+        padding: $size-medium;
+        font-size: resize($default-font-size, 1.8);
         cursor: pointer;
         border-bottom: 1px solid $color-black;
     }
