--- a/src/css/components/_item-wrapper.scss
+++ b/src/css/components/_item-wrapper.scss
@@ -1,7 +1,7 @@
 .item-wrapper {
     width: 100%;
     height: 100%;
-    padding: $padding-small;
+    padding: $size-small;
     display: flex;
     flex-direction: column;
     background-color: pink;
