--- a/src/css/components/_window.scss
+++ b/src/css/components/_window.scss
@@ -1,43 +1,30 @@
-// .ReactModalPortal {
-//     position: absolute;
-//     width: 100vw;
-//     height: 100vh;
-//     top: 0;
-    // left: 0;
-    // bottom: 0; 
-    // right: 0;
-// }
-
-// .ReactModal_Overlay {
-//     width: 100%;
-//     height: 100%;
-// }
-
 .window-modal {
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0; 
     right: 0;
-    padding: $padding-large;
+    padding: $size-large;
     background: rgba(0,0,0,0.6);
+    z-index: 2;
     &__section {
         background: $color-grey-1;
         width: 35%;
         height: 50%;
         border-radius: $border-radius;
-        padding: $padding-medium;
+        padding: $size-medium;
         position: relative;
     }
     &__title-section {
-        padding: $padding-small 0;
+        padding: $size-small 0;
         border-bottom: 1px solid $color-black;
         text-align: center;
+    }
+    &__title {
+        font-size: resize($default-font-size, 2);
     }
     &__btn {
         position: absolute;
@@ -47,9 +34,9 @@
         background: $color-black;
     }
     &__description-section {
-        margin-top: $margin-medium;
+        margin-top: $size-medium;
     }
     &__description-text {
-        font-size: resize($default-font-size, 1);
+        font-size: resize($default-font-size, 1.6);
     }
 }
