--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -7,6 +7,6 @@
         background-color: red;
         display: inline-flex;
         align-items: center;
-        padding: 0 $padding-small;
+        padding: 0 $size-small;
     }
 }
