--- a/src/css/components/_modal.scss
+++ b/src/css/components/_modal.scss
@@ -19,7 +19,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         width: 50rem;
-        padding: $padding-small;
+        padding: $size-small;
         background-color: $color-grey-1;
         display: flex;
         flex-direction: column;
