--- a/src/css/components/_column.scss
+++ b/src/css/components/_column.scss
@@ -1,10 +1,7 @@
 .col {
     background-color: $color-grey-1;
+    background-color: rgba(0,0,0,0.4);
     border-radius: $border-radius;
-    // background-image: url('../assets/icons/svg/000-wood-board.svg');
-    // background-repeat: no-repeat;
-    // background-size: contain;
-    // background-position: center;
     width: 30rem;
     display: flex;
     flex-direction: column;
@@ -41,5 +38,10 @@
         display: flex;
         justify-content: center;
         margin: $size-small 0;
+    }
+    &__sticks-plus {
+        width: 2rem;
+        height: 2rem;
+        transform: rotate(45deg);
     }
 }
