--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,7 @@
 @import './base/variables';
 @import './base/functions';
 @import './base/typography';
+@import './base/animations';
 @import './base/base';
 
 @import './components/item';
