--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -9,6 +9,7 @@
 @import './components/item-menu';
 @import './components/move-item';
 @import './components/column';
+@import './components/column-edit-menu';
 @import './components/column-wrapper';
 @import './components/modal';
 @import './components/button';
