--- a/src/css/components/_item-wrapper.scss
+++ b/src/css/components/_item-wrapper.scss
@@ -4,7 +4,7 @@
     padding: $size-small;
     display: flex;
     flex-direction: column;
-    background-color: rgba($color-green-3,0.6);
+    background-color: rgba($color-black,0.2);
     // background-image: url('../assets/icons/svg/000-wood-board.svg');
     // background-position: center;
 }
