--- a/src/css/style.css
+++ b/src/css/style.css
@@ -93,10 +93,25 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(204, 204, 204, 0.5)), to(rgba(110, 110, 110, 0.5))), url("../assets/images/bg.jpg");
-  background-image: linear-gradient(to right bottom, rgba(204, 204, 204, 0.5), rgba(110, 110, 110, 0.5)), url("../assets/images/bg.jpg");
-  background-image: url("../assets/images/bg.jpg");
-  background-size: cover;
+  z-index: 2;
+}
+
+.background__bamboo {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: -2;
+}
+
+.background__dojo {
+  position: absolute;
+  z-index: -1;
+  width: 80vw;
+  height: 80vh;
+  bottom: 2.8rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 main {
@@ -156,7 +171,7 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: rgba(74, 84, 77, 0.6);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .item-menu {
@@ -285,7 +300,7 @@ main {
 
 .col {
   background-color: #cccccc;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(74, 84, 77, 0.6);
   border-radius: 0.5rem;
   width: 30rem;
   display: -webkit-box;
@@ -309,13 +324,27 @@ main {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  height: 3rem;
+  height: 5rem;
+  color: #fff;
 }
 
 .col__column-btn {
   position: absolute;
   top: 0.5rem;
   right: 0.5rem;
+  background: transparent;
+  border: none;
+  border-radius: 50%;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
+.col__column-btn:focus {
+  outline: none;
+}
+
+.col__scrolls {
+  width: 3rem;
 }
 
 .col__col-individual {
@@ -346,7 +375,8 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 2rem;
+  font-size: 2.2rem;
+  letter-spacing: 1.1px;
 }
 
 .col__ctrl-box {
@@ -356,7 +386,7 @@ main {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 2rem 0;
+  margin: 1.5rem 0;
 }
 
 .col__sticks-plus {
