--- a/src/css/components/_item-menu.scss
+++ b/src/css/components/_item-menu.scss
@@ -34,6 +34,13 @@
     &__li:last-of-type {
         border-bottom: none;
     }
+    &__katana{
+        width: 2rem;
+        transition: all 300ms;
+        &:hover {
+            transform: scale(1.2);
+        }
+    }
     &__close {
         position: absolute;
         right: 20px;
