--- a/src/css/style.css
+++ b/src/css/style.css
@@ -221,6 +221,17 @@ main {
   border-bottom: none;
 }
 
+.item-menu__katana {
+  width: 2rem;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+}
+
+.item-menu__katana:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
 .item-menu__close {
   position: absolute;
   right: 20px;
@@ -702,3 +713,4 @@ main {
 .footer__dev-link:hover {
   color: #3e752d;
 }
+/*# sourceMappingURL=style.css.map */
