--- a/src/css/components/_item-menu.scss
+++ b/src/css/components/_item-menu.scss
@@ -1,5 +1,5 @@
 .item-menu {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba($color-black, 0.7);
     position: fixed;
     padding: $size-tiny $size-xsmall;
     top: 0;
@@ -11,32 +11,11 @@
     align-items: center;
     justify-content: center;
 
-    &__ul {
-        background-color: $color-grey-1;
-        width: 25%;
-        list-style-type: none;
-        text-align: center;
-        padding: $size-medium;
-        border-radius: 10px;
-        position: relative;
-        min-width: 30rem;
-        transition: all 0.2s ease-in-out;
-    }
-    &__li {
-        padding: $size-small;
-        font-size: resize($default-font-size, 1.8);
-        cursor: pointer;
-        border-bottom: 1px solid $color-black;
-        position: relative;
-        height: 100%;
-        width: 100%;
-    }
-    &__li:last-of-type {
-        border-bottom: none;
-    }
-    &__katana{
+    @include menu-style($size-medium);
+    &__katana {
         width: 2rem;
-        transition: all 300ms;
+        transition: all 0.3s;
+
         &:hover {
             transform: scale(1.2);
         }
@@ -47,23 +26,5 @@
         top: 10px;
         cursor: pointer;
     }
-    &__svg {
-        height: 3rem;
-        position: absolute;
-        top: 50%;
-        left: 0;
-        opacity: 1;
-        transform: rotate(-135deg) translate(35%, 35%);
-
-        &--animated {
-            animation: move-in-left 0.5s ease-out;
-            animation-fill-mode: backwards;
-            transition: all 0.2s ease-in-out;
-        }
-    }
-    &__li:hover &__svg {
-        transform: rotate(-135deg) translate(0);
-        animation: move-in-left-100 0.3s ease-out;
-        animation-fill-mode: forwards;
-    }
+    @include kunai-svg;
 }
