--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,6 +44,7 @@
   100% {
     -webkit-transform: translateX(35rem) translateY(-1.5rem) rotate(-135deg);
             transform: translateX(35rem) translateY(-1.5rem) rotate(-135deg);
+    opacity: 0;
   }
 }
 
@@ -55,6 +56,7 @@
   100% {
     -webkit-transform: translateX(35rem) translateY(-1.5rem) rotate(-135deg);
             transform: translateX(35rem) translateY(-1.5rem) rotate(-135deg);
+    opacity: 0;
   }
 }
 
@@ -175,7 +177,7 @@ main {
 }
 
 .item-menu {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.7);
   position: fixed;
   padding: 0.5rem 1rem;
   top: 0;
@@ -202,17 +204,18 @@ main {
   padding: 4rem;
   border-radius: 10px;
   position: relative;
-  min-width: 30rem;
+  width: 30rem;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+  text-transform: uppercase;
 }
 
 .item-menu__li {
-  padding: 2rem;
   font-size: 1.8rem;
-  cursor: pointer;
   border-bottom: 1px solid #000;
+  padding: 2rem;
   position: relative;
+  cursor: pointer;
   height: 100%;
   width: 100%;
 }
@@ -223,8 +226,8 @@ main {
 
 .item-menu__katana {
   width: 2rem;
-  -webkit-transition: all 300ms;
-  transition: all 300ms;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .item-menu__katana:hover {
@@ -271,13 +274,13 @@ main {
   position: absolute;
   top: 39%;
   left: 59%;
-  border: 1px solid black;
-  border-radius: 10px;
+  border-radius: 1rem;
   z-index: 3;
   background-color: #cccccc;
-  width: 20%;
   padding: 2rem;
   text-align: center;
+  -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5);
+          box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5);
 }
 
 .move-item__close {
@@ -289,7 +292,8 @@ main {
 
 .move-item__title {
   font-size: 2.4rem;
-  margin-bottom: 2rem;
+  text-transform: uppercase;
+  border-bottom: 1px solid #000;
 }
 
 .move-item__subtitle {
@@ -299,14 +303,59 @@ main {
 }
 
 .move-item__ul {
+  background-color: #cccccc;
+  width: 25%;
   list-style-type: none;
-  padding: 0.5rem;
+  text-align: center;
+  padding: 2rem;
+  border-radius: 10px;
+  position: relative;
+  width: 30rem;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  text-transform: uppercase;
 }
 
 .move-item__li {
-  font-size: 1.6rem;
-  padding: 0.5rem 0;
+  font-size: 1.8rem;
+  border-bottom: 1px solid #000;
+  padding: 2rem;
+  position: relative;
   cursor: pointer;
+  height: 100%;
+  width: 100%;
+}
+
+.move-item__li:last-of-type {
+  border-bottom: none;
+}
+
+.move-item__svg {
+  height: 3rem;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  opacity: 1;
+  -webkit-transform: rotate(-135deg) translate(35%, 35%);
+          transform: rotate(-135deg) translate(35%, 35%);
+}
+
+.move-item__svg--animated {
+  -webkit-animation: move-in-left 0.5s ease-out;
+          animation: move-in-left 0.5s ease-out;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.move-item__li:hover .move-item__svg {
+  -webkit-transform: rotate(-135deg) translate(0);
+          transform: rotate(-135deg) translate(0);
+  -webkit-animation: move-in-left-100 0.3s ease-out;
+          animation: move-in-left-100 0.3s ease-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .col {
@@ -423,7 +472,7 @@ main {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 100;
 }
 
@@ -713,4 +762,3 @@ main {
 .footer__dev-link:hover {
   color: #3e752d;
 }
-/*# sourceMappingURL=style.css.map */
