--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,5 +1,6 @@
 @import './base/variables';
 @import './base/functions';
+@import './base/mixin';
 @import './base/typography';
 @import './base/animations';
 @import './base/base';
